# windows-authentication-detection-lab

./: .gitattributes  .gitignore  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pages.yml  validate.yml
docs/: ALERT_NARRATIVES.md  ARCHITECTURE.md  DATA_SOURCES.md  DETECTION_CATALOG.md  GITBOOK_SETUP.es.md  GITBOOK_SETUP.md  PORTFOLIO_PRESENTATION.md  README.md  RELEASE_CHECKLIST.md  REVIEWER_GUIDE.md  SUMMARY.md  TUNING_GUIDE.md  VALIDATION.md  VM_EVIDENCE_TEMPLATE.json  VM_LAB.md  VM_READINESS_CHECKLIST.md
docs/playbooks/: AUTH-001_failed_logon_burst.md  AUTH-002_multiple_accounts.md  AUTH-003_success_after_failures.md  AUTH-004_account_lockout_burst.md  AUTH-005_privileged_remote_logon.md  README.md
reports/latest/: demo.html  report.en.html  report.en.md  report.es.html  report.es.md  validation-matrix.csv
rules/: auth_001_failed_logon_burst.yml  auth_002_multiple_accounts.yml  auth_003_success_after_failures.yml  auth_004_account_lockout_burst.yml  auth_005_privileged_remote_logon.yml  manifest.json
src/authlab/: __init__.py  audit.py  cli.py  convert.py  demo.py  explain.py  oracle.py  paths.py  report.py  rules.py  validation.py  vm_lab.py
tests/: test_cli.py  test_conversion.py  test_demo.py  test_oracle.py  test_public_docs.py  test_reports.py  test_rules.py  test_security.py  test_vm_lab.py
tests/fixtures/: scenarios.json
