[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windows-authentication-detection-lab"
version = "0.1.0"
description = "A safe, reproducible Sigma detection engineering lab for Windows authentication anomalies."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rubén Asúa" }]
dependencies = [
  "PyYAML>=6.0.2,<7",
  "pysigma>=0.11,<1",
  "sigma-cli>=1.0,<2",
  "pysigma-backend-splunk>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "detect-secrets>=1.5,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
authlab = "authlab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/authlab"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/authlab/report.py" = ["E501"]
"src/authlab/convert.py" = ["E501"]
